--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.15",
+    "opusscript": "^0.0.8",
     "prism-media": "^1.3.5"
   }
 }
